@@ -1,0 +1,108 @@
+
+// This file has been generated by the GUI designer. Do not modify.
+namespace bazar
+{
+	public partial class LesseeDebtsReport
+	{
+		private global::Gtk.Label label2;
+		private global::Gtk.HBox hbox1;
+		private global::Gtk.ComboBox comboMonth;
+		private global::Gtk.ComboBox comboYear;
+		private global::Gtk.Button buttonCancel;
+		private global::Gtk.Button buttonOk;
+		
+		protected virtual void Build ()
+		{
+			global::Stetic.Gui.Initialize (this);
+			// Widget bazar.LesseeDebtsReport
+			this.Name = "bazar.LesseeDebtsReport";
+			this.Title = "Отчет по долгам арендаторов";
+			this.WindowPosition = ((global::Gtk.WindowPosition)(4));
+			this.Modal = true;
+			// Internal child bazar.LesseeDebtsReport.VBox
+			global::Gtk.VBox w1 = this.VBox;
+			w1.Name = "dialog1_VBox";
+			w1.BorderWidth = ((uint)(2));
+			// Container child dialog1_VBox.Gtk.Box+BoxChild
+			this.label2 = new global::Gtk.Label ();
+			this.label2.Name = "label2";
+			this.label2.LabelProp = "Не учитывать начисления после";
+			w1.Add (this.label2);
+			global::Gtk.Box.BoxChild w2 = ((global::Gtk.Box.BoxChild)(w1 [this.label2]));
+			w2.Position = 0;
+			w2.Fill = false;
+			// Container child dialog1_VBox.Gtk.Box+BoxChild
+			this.hbox1 = new global::Gtk.HBox ();
+			this.hbox1.Name = "hbox1";
+			this.hbox1.Spacing = 6;
+			// Container child hbox1.Gtk.Box+BoxChild
+			this.comboMonth = global::Gtk.ComboBox.NewText ();
+			this.comboMonth.AppendText ("Все");
+			this.comboMonth.AppendText ("Января");
+			this.comboMonth.AppendText ("Февраля");
+			this.comboMonth.AppendText ("Марта");
+			this.comboMonth.AppendText ("Апреля");
+			this.comboMonth.AppendText ("Майя");
+			this.comboMonth.AppendText ("Июня");
+			this.comboMonth.AppendText ("Июля");
+			this.comboMonth.AppendText ("Августа");
+			this.comboMonth.AppendText ("Сентября");
+			this.comboMonth.AppendText ("Октября");
+			this.comboMonth.AppendText ("Ноября");
+			this.comboMonth.AppendText ("Декабря");
+			this.comboMonth.Name = "comboMonth";
+			this.hbox1.Add (this.comboMonth);
+			global::Gtk.Box.BoxChild w3 = ((global::Gtk.Box.BoxChild)(this.hbox1 [this.comboMonth]));
+			w3.Position = 0;
+			w3.Fill = false;
+			// Container child hbox1.Gtk.Box+BoxChild
+			this.comboYear = global::Gtk.ComboBox.NewText ();
+			this.comboYear.Name = "comboYear";
+			this.hbox1.Add (this.comboYear);
+			global::Gtk.Box.BoxChild w4 = ((global::Gtk.Box.BoxChild)(this.hbox1 [this.comboYear]));
+			w4.Position = 1;
+			w4.Fill = false;
+			w1.Add (this.hbox1);
+			global::Gtk.Box.BoxChild w5 = ((global::Gtk.Box.BoxChild)(w1 [this.hbox1]));
+			w5.Position = 1;
+			w5.Fill = false;
+			// Internal child bazar.LesseeDebtsReport.ActionArea
+			global::Gtk.HButtonBox w6 = this.ActionArea;
+			w6.Name = "dialog1_ActionArea";
+			w6.Spacing = 10;
+			w6.BorderWidth = ((uint)(5));
+			w6.LayoutStyle = ((global::Gtk.ButtonBoxStyle)(4));
+			// Container child dialog1_ActionArea.Gtk.ButtonBox+ButtonBoxChild
+			this.buttonCancel = new global::Gtk.Button ();
+			this.buttonCancel.CanDefault = true;
+			this.buttonCancel.CanFocus = true;
+			this.buttonCancel.Name = "buttonCancel";
+			this.buttonCancel.UseStock = true;
+			this.buttonCancel.UseUnderline = true;
+			this.buttonCancel.Label = "gtk-cancel";
+			this.AddActionWidget (this.buttonCancel, -6);
+			global::Gtk.ButtonBox.ButtonBoxChild w7 = ((global::Gtk.ButtonBox.ButtonBoxChild)(w6 [this.buttonCancel]));
+			w7.Expand = false;
+			w7.Fill = false;
+			// Container child dialog1_ActionArea.Gtk.ButtonBox+ButtonBoxChild
+			this.buttonOk = new global::Gtk.Button ();
+			this.buttonOk.CanDefault = true;
+			this.buttonOk.CanFocus = true;
+			this.buttonOk.Name = "buttonOk";
+			this.buttonOk.UseStock = true;
+			this.buttonOk.UseUnderline = true;
+			this.buttonOk.Label = "gtk-ok";
+			this.AddActionWidget (this.buttonOk, -5);
+			global::Gtk.ButtonBox.ButtonBoxChild w8 = ((global::Gtk.ButtonBox.ButtonBoxChild)(w6 [this.buttonOk]));
+			w8.Position = 1;
+			w8.Expand = false;
+			w8.Fill = false;
+			if ((this.Child != null)) {
+				this.Child.ShowAll ();
+			}
+			this.DefaultWidth = 330;
+			this.DefaultHeight = 123;
+			this.Show ();
+		}
+	}
+}
